--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.12.8",
     "tslib": "^2.2.0"
+  },
+  "scripts": {
+    "start": "nodemon admin.js"
   }
 }
