--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "admin-bro": "^4.0.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
